--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
         >
         <nav class="header-nav">
           <ul class="header-list">
-            <li class="header-item"><a href="">Studio</a></li>
-            <li class="header-item"><a href="">Portfolio</a></li>
-            <li class="header-item"><a href="">Contacts</a></li>
+            <li class="header-item">
+              <a class="header-item-link" href="">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-item-link" href="">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-item-link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="header-contact">
