--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <h2 class="visually-hidden">Our Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands with the strongest digital growth
@@ -89,13 +104,17 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
-            <!-- git add . && git commit -m "Описание изменений" && git push origin main -->
           </ul>
         </div>
       </section>
@@ -113,6 +132,40 @@
               />
               <h3 class="team-card-title">Mark Guerrero</h3>
               <p class="team-card-text">Product Designer</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -124,6 +177,40 @@
               />
               <h3 class="team-card-title">Tom Ford</h3>
               <p class="team-card-text">Frontend Developer</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -135,6 +222,40 @@
               />
               <h3 class="team-card-title">Camila Garcia</h3>
               <p class="team-card-text">Marketing</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -146,6 +267,40 @@
               />
               <h3 class="team-card-title">Daniel Wilson</h3>
               <p class="team-card-text">UI Designer</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="team-soc-item">
+                  <svg class="team-soc" width="16" height="16">
+                    <use
+                      class="team-soc-icon"
+                      href="./images/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -238,14 +393,53 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          ><span class="footer-span">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-text-group">
+          <a href="./index.html" class="footer-logo"
+            ><span class="footer-span">Web</span>Studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc">
+          <h3 class="footer-soc-title">Social media</h3>
+          <ul class="team-soc-list">
+            <li class="footer-soc-item">
+              <svg class="team-soc" width="16" height="16">
+                <use
+                  class="team-soc-icon"
+                  href="./images/symbol-defs.svg#icon-instagram"
+                ></use>
+              </svg>
+            </li>
+            <li class="footer-soc-item">
+              <svg class="team-soc" width="16" height="16">
+                <use
+                  class="team-soc-icon"
+                  href="./images/symbol-defs.svg#icon-twitter"
+                ></use>
+              </svg>
+            </li>
+            <li class="footer-soc-item">
+              <svg class="team-soc" width="16" height="16">
+                <use
+                  class="team-soc-icon"
+                  href="./images/symbol-defs.svg#icon-facebook"
+                ></use>
+              </svg>
+            </li>
+            <li class="footer-soc-item">
+              <svg class="team-soc" width="16" height="16">
+                <use
+                  class="team-soc-icon"
+                  href="./images/symbol-defs.svg#icon-linkedin"
+                ></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
