add overflow text

--- a/index.html
+++ b/index.html
@@ -306,85 +306,127 @@
         </div>
       </section>
       <section class="gallery">
-        <div class="container">
+        <div class="container gallery-container">
           <h2 class="gallery-title">Our Portfolio</h2>
           <ul class="gallery-list">
             <li class="gallery-item">
-              <img
-                class="gallery-item-card"
-                src="./images/img-11.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
               <div class="gallery-text-group">
+                <img
+                  class="gallery-item-card"
+                  src="./images/img-11.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="text-bottom">
                 <h3 class="gallery-card-title">Banking App</h3>
                 <p class="gallery-card-text">App</p>
               </div>
             </li>
             <li class="gallery-item">
-              <img
-                class="gallery-item-card"
-                src="./images/img-12.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
               <div class="gallery-text-group">
-                <h3 class="gallery-card-title">Cashless Payment</h3>
-                <p class="gallery-card-text">Marketing</p>
+                <img
+                  class="gallery-item-card"
+                  src="./images/img-12.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-            </li>
-            <li class="gallery-item">
-              <img
-                class="gallery-item-card"
-                src="./images/img-13.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-text-group">
-                <h3 class="gallery-card-title">Meditation App</h3>
+              <div class="text-bottom">
+                <h3 class="gallery-card-title">Banking App</h3>
                 <p class="gallery-card-text">App</p>
               </div>
             </li>
             <li class="gallery-item">
-              <img
-                class="gallery-item-card"
-                src="./images/img-14.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
               <div class="gallery-text-group">
-                <h3 class="gallery-card-title">Taxi Service</h3>
-                <p class="gallery-card-text">Marketing</p>
+                <img
+                  class="gallery-item-card"
+                  src="./images/img-13.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="text-bottom">
+                <h3 class="gallery-card-title">Banking App</h3>
+                <p class="gallery-card-text">App</p>
               </div>
             </li>
             <li class="gallery-item">
-              <img
-                class="gallery-item-card"
-                src="./images/img-15.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
               <div class="gallery-text-group">
-                <h3 class="gallery-card-title">Screen Illustrations</h3>
-                <p class="gallery-card-text">Design</p>
+                <img
+                  class="gallery-item-card"
+                  src="./images/img-15.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="text-bottom">
+                <h3 class="gallery-card-title">Banking App</h3>
+                <p class="gallery-card-text">App</p>
               </div>
             </li>
             <li class="gallery-item">
-              <img
-                class="gallery-item-card"
-                src="./images/img-16.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
               <div class="gallery-text-group">
-                <h3 class="gallery-card-title">Online Courses</h3>
-                <p class="gallery-card-text">Marketing</p>
+                <img
+                  class="gallery-item-card"
+                  src="./images/img-16.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="text-bottom">
+                <h3 class="gallery-card-title">Banking App</h3>
+                <p class="gallery-card-text">App</p>
+              </div>
+            </li>
+            <li class="gallery-item">
+              <div class="gallery-text-group">
+                <img
+                  class="gallery-item-card"
+                  src="./images/img-11.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="text-bottom">
+                <h3 class="gallery-card-title">Banking App</h3>
+                <p class="gallery-card-text">App</p>
               </div>
             </li>
           </ul>
