change hjver and list

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <a href="./index.html" class="header-logo"
           ><span class="header-span">Web</span>Studio</a
         >
         <nav class="header-nav">
           <ul class="header-list">
             <li class="header-item">
-              <a class="header-item-link" href="">Studio</a>
+              <a class="header-item-link current" href="">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-item-link" href="">Portfolio</a>
@@ -134,36 +134,44 @@
               <p class="team-card-text">Product Designer</p>
               <ul class="team-soc-list">
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-instagram"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-twitter"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-facebook"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-linkedin"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -179,36 +187,44 @@
               <p class="team-card-text">Frontend Developer</p>
               <ul class="team-soc-list">
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-instagram"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-twitter"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-facebook"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-linkedin"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -224,36 +240,44 @@
               <p class="team-card-text">Marketing</p>
               <ul class="team-soc-list">
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-instagram"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-twitter"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-facebook"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-linkedin"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -269,36 +293,44 @@
               <p class="team-card-text">UI Designer</p>
               <ul class="team-soc-list">
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-instagram"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-twitter"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-facebook"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team-soc-item">
-                  <svg class="team-soc" width="16" height="16">
-                    <use
-                      class="team-soc-icon"
-                      href="./images/symbol-defs.svg#icon-linkedin"
-                    ></use>
-                  </svg>
+                  <a href="#" class="team-soc-link">
+                    <svg class="team-soc" width="16" height="16">
+                      <use
+                        class="team-soc-icon"
+                        href="./images/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -346,7 +378,7 @@
               </div>
               <div class="text-bottom">
                 <h3 class="gallery-card-title">Banking App</h3>
-                <p class="gallery-card-text">App</p>
+                <p class="gallery-card-text">Marketing</p>
               </div>
             </li>
             <li class="gallery-item">
@@ -373,6 +405,26 @@
               <div class="gallery-text-group">
                 <img
                   class="gallery-item-card"
+                  src="./images/img-14.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="text-bottom">
+                <h3 class="gallery-card-title">Banking App</h3>
+                <p class="gallery-card-text">Marketing</p>
+              </div>
+            </li>
+            <li class="gallery-item">
+              <div class="gallery-text-group">
+                <img
+                  class="gallery-item-card"
                   src="./images/img-15.jpg"
                   alt="Banking App"
                   width="360"
@@ -386,7 +438,7 @@
               </div>
               <div class="text-bottom">
                 <h3 class="gallery-card-title">Banking App</h3>
-                <p class="gallery-card-text">App</p>
+                <p class="gallery-card-text">Design</p>
               </div>
             </li>
             <li class="gallery-item">
@@ -406,27 +458,7 @@
               </div>
               <div class="text-bottom">
                 <h3 class="gallery-card-title">Banking App</h3>
-                <p class="gallery-card-text">App</p>
-              </div>
-            </li>
-            <li class="gallery-item">
-              <div class="gallery-text-group">
-                <img
-                  class="gallery-item-card"
-                  src="./images/img-11.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-                <p class="cover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
-              <div class="text-bottom">
-                <h3 class="gallery-card-title">Banking App</h3>
-                <p class="gallery-card-text">App</p>
+                <p class="gallery-card-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -449,36 +481,44 @@
           <h3 class="footer-soc-title">Social media</h3>
           <ul class="team-soc-list">
             <li class="footer-soc-item">
-              <svg class="team-soc" width="16" height="16">
-                <use
-                  class="team-soc-icon"
-                  href="./images/symbol-defs.svg#icon-instagram"
-                ></use>
-              </svg>
+              <a href="#" class="footer-link">
+                <svg class="team-soc" width="16" height="16">
+                  <use
+                    class="team-soc-icon"
+                    href="./images/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-soc-item">
-              <svg class="team-soc" width="16" height="16">
-                <use
-                  class="team-soc-icon"
-                  href="./images/symbol-defs.svg#icon-twitter"
-                ></use>
-              </svg>
+              <a href="#" class="footer-link">
+                <svg class="team-soc" width="16" height="16">
+                  <use
+                    class="team-soc-icon"
+                    href="./images/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-soc-item">
-              <svg class="team-soc" width="16" height="16">
-                <use
-                  class="team-soc-icon"
-                  href="./images/symbol-defs.svg#icon-facebook"
-                ></use>
-              </svg>
+              <a href="#" class="footer-link">
+                <svg class="team-soc" width="16" height="16">
+                  <use
+                    class="team-soc-icon"
+                    href="./images/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-soc-item">
-              <svg class="team-soc" width="16" height="16">
-                <use
-                  class="team-soc-icon"
-                  href="./images/symbol-defs.svg#icon-linkedin"
-                ></use>
-              </svg>
+              <a href="#" class="footer-link">
+                <svg class="team-soc" width="16" height="16">
+                  <use
+                    class="team-soc-icon"
+                    href="./images/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
